# COGNOSO

./: .gitignore  .gitmodules  Cargo.toml  README.org  manifest.scm
.github/workflows/: npm.yml  react.yml  rust.yml
backend/: Cargo.toml  llama.sh  qdrant.sh  run.sh
backend/crates/api_structs/src/: lib.rs
backend/crates/llama_runner/: Cargo.toml
backend/crates/llama_runner/src/: lib.rs  token_output_stream.rs
backend/crates/pdf_parser/: Cargo.toml
backend/crates/pdf_parser/src/: lib.rs
backend/crates/sentence_embedder/: Cargo.toml
backend/crates/sentence_embedder/src/: lib.rs
backend/crates/server_backend/: Cargo.toml
backend/crates/server_backend/src/: andy_error.rs  api_structs.rs  args.rs  main.rs
backend/crates/server_backend/src/server/: database.rs  llm.rs  mod.rs  utils.rs
backend/crates/server_backend/src/server/search_engine/: mod.rs
backend/crates/server_frontend/: Cargo.toml
backend/crates/server_frontend/src/: andy_error.rs  args.rs
backend/test_dashboard/: Makefile
backend/test_dashboard/root/: index.html
backend/tls_certificate/: ca.key  ca.pem  ca.srl  home.local.crt  home.local.csr  home.local.ext  home.local.key
crates/api_structs/: Cargo.toml
crates/api_structs/src/: lib.rs
crates/frontend_wasm/: Cargo.toml
crates/frontend_wasm/src/: card_interface.rs  lib.rs
crates/http_server/: Cargo.toml
crates/http_server/src/: main.rs
crates/server_backend/: Cargo.toml
crates/server_backend/src/: andy_error.rs  args.rs  main.rs
crates/server_backend/src/server/: database.rs  mod.rs
crates/server_frontend/src/: main.rs
frontend/: Loginscreen.jsx  gatsby-config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  backend_interface.ts  index.tsx  navbar.tsx  utils.tsx
frontend/src/pages/: 404.tsx  Login.tsx  index.tsx
frontend/src/pages/FlashcardViewer/: App.js  App.tsx  ArrowButtons.tsx  Flashcard.js  FlashcardApp.tsx
frontend/src/pages/Homepage/: Homepage.tsx
frontend/src/pages/acc_create/: acc_create.css  index.tsx  login.css
frontend/src/pages/acc_manage/: index.tsx
frontend/src/pages/ai_test/: ai_test.css  index.tsx
frontend/src/pages/deck_manage/: deck_manage.css  index.tsx
frontend/src/pages/flashcard_editor/: flashcard_editor.css  index.tsx
frontend/src/pages/flashcard_viewer/: ArrowButtons.tsx  Flashcard.css  Flashcard.tsx  FlashcardApp.tsx  index.tsx
frontend/src/pages/home_page/: dummydeck.tsx  home.css  index.tsx
frontend/src/pages/login/: index.tsx  login.css
frontend/src/pages/minigame/: index.tsx
frontend/src/pages/pdf_upload/: index.tsx
frontend/src/pages/search_results/: dummydeck.tsx  index.tsx  search_results.css
test_dashboard/root/: main.js
website/: .gitignore  Makefile
website/root/: home_page.css  index.html  main.js
website/root/app_name/: package-lock.json  package.json
website/root/app_name/src/: App.js  FlashcardApp.js
