[package]
name = "frontend_wasm"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
api_structs = { workspace = true }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.37"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5.0"
base64 = "0.21.2"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
thiserror = "1.0.56"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'HtmlCollection',
  "NamedNodeMap",
  "Attr",
  "HtmlFormElement",
  "HtmlInputElement",
  "FormData",
  "CssStyleDeclaration",
  "FileList",
  "File",
  "FileReader",
  "Event",
  "ReadableStream",
  "ReadableStreamDefaultReader"
]
