[package]
name = "server_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
routerify = "3.0.0"
thiserror = "1.0.56"
api_structs = { workspace = true }
