[package]
name = "sentence_embedder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
serde_json = "1.0.113"
tokenizers = "0.15.1"
