[package]
name = "server_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
thiserror = "1.0.56"
api_structs = { workspace = true }
clap = { version = "4.4.16", features = ["derive"] }
redb = "1.5.0"
sha2 = "0.10.8"
serde_with = "3.6.0"
