[package]
name = "server_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
http-body-util = "0.1.0"
thiserror = "1.0.56"
pdf_parser = { workspace = true }
clap = { version = "4.4.16", features = ["derive"] }
redb = "1.5.0"
sha2 = "0.10.8"
rand = "0.8.5"
data-url = "0.3.1"
