[package]
name = "andy_http_server"
version = "0.1.0"
edition = "2021"
authors = ["陈功 <chengong456@qq.com>"]

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util =  { workspace = true }
tokio = { workspace = true }
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.56"


